fix video overflow

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -28,3 +28,7 @@ ul,ol {
   margin: var(--pico-spacing);
   padding: var(--pico-spacing);
 }
+
+.width-fit {
+  width: 100%;
+}
